# kentro

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: publish-python.yml
examples/: simple.rs
kentro/: all.html  constant.EPS.html  constant.PARTLY_REMAINING_FACTOR.html  constant.PENALTY_FACTOR.html  enum.KMeansError.html  index.html  sidebar-items.js  struct.KMeans.html  type.Result.html
search.desc/kentro/: kentro-desc-0-.js
src/: lib.rs
src/kentro/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/result/: enum.Result.js
